--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -1,2 +1,25 @@
-hello WOrld
-what is up
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Twitter</title>
+</head>
+<body>
+    <div class="uno">
+        <img class="photo" src="img/Baldski.jpg" alt="twitter">
+        <div class="content">
+            <p class="username"><b>@KSI</b></p>
+            <p class="tweet">I am the Nightmare!! <b>KSI</b>, you don't want to fight with me!</p>
+            <img class="comment" src="img/comment.png" alt="comment"><p class="count">123</p>
+            <img class="retweet" src="img/retweet.jpg" alt="retweet"><p class="count">137</p>
+            <img class="like" src="img/like.png" alt="like"><p class="count">69.9k</p>
+        </div>
+    </div>
+</body>
+</html>
