--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -8,30 +8,32 @@
 </head>
 <body>
     <h1>My first web page</h1>
-    <h2><p>What this is</p></h2>
-    <p>Welcome to <i>my first webpage</i>. I created this webpage without the assistance of a webpage editor. Just my little text editor and a keen <b>understanding of HTML.</b></p>
-    <h2><p>What this is</p></h2>
-    <ul>
-        <li>To learn HTML</li>
-    <li>List element
-        <ol>
-            <li>Home</li>
-            <li>FAQ</li>
-            <li>Contact</li>
-            <li>About</li>
-        </ol>
-    </li>
-    <li>Here I have created ordered and unordered List</li>
-</ul>
-    
-    <h2><p>ZeusLearning.com</p></h2>
+    <h2><p> What this is</p></h2>
+    <p id="text">Welcome to <i>my first webpage</i>. I created this webpage without the assistance of a webpage editor. Just my little text editor and a keen <b>understanding of HTML.</b></p>
+    <h2><p> What this is</p></h2>
+    <div class="List">
+        <ul>
+            <li>To learn HTML</li>
+        <li>List element
+            <ol>
+                <li>Home</li>
+                <li>FAQ</li>
+                <li>Contact</li>
+                <li>About</li>
+            </ol>
+        </li>
+        <li>Here I have created ordered and unordered List</li>
+    </ul>
+    </div>
+
+    <h2><p> ZeusLearning.com</p></h2>
     <p><a href="https://zeuslearning.com" target="_blank">This link will open zeuslearning.com in a new tab</a> </p>
-    <h2><p>On click of the following image navigate to Google.com</p></h2>
+    <h2><p> On click of the following image navigate to Google.com</p></h2>
     <a href="https://www.google.com" target="_blank">
         <img src="google.png" alt="Google">
     </a>
     <h3>Some random table</h3>
-    <table border="1">
+    <table class="table" border="1">
         <tr>
             <td>Row 1, cell 1</td>
             <td>Row 1, cell 2</td>
@@ -55,7 +57,7 @@
     </table>
     <form>
         <h3><p>Some random form</p></h3>
-        <p><b>Note:</b> It looks the part, but won't do anything.</p>
+        <p><i><b>NOTE:</b></i> It looks the part, but won't do anything.</p>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" placeholder="Your name">
         <p>Comments:</p>
