Changes in the css(still one issue remaining)

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -15,10 +15,15 @@
         <img class="photo" src="img/Baldski.jpg" alt="twitter">
         <div class="content">
             <p class="username"><b>@KSI</b></p>
-            <p class="tweet">I am the Nightmare!! <b>KSI</b>, you don't want to fight with me!</p>
-            <img class="comment" src="img/comment.png" alt="comment"><p class="count">123</p>
-            <img class="retweet" src="img/retweet.jpg" alt="retweet"><p class="count">137</p>
-            <img class="like" src="img/like.png" alt="like"><p class="count">69.9k</p>
+            <p class="tweet">I am the Nightmare!! <b>KSI</b></p>
+            <div class="icon">
+            <img class="comment" src="img/comment.png" alt="comment">
+            <p class="c_count">123</p>
+            <img class="retweet" src="img/retweet.jpg" alt="retweet">
+            <p class="t_count">137</p>
+            <img class="like" src="img/like.png" alt="like">
+            <p class="l_count">69.9k</p>
+            </div>
         </div>
     </div>
 </body>
