Done fixed the issue.....thought the issue was in flexbox but accutualy the image was faulty

--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="uno">
-        <img class="photo" src="img/Baldski.jpg" alt="twitter">
+        <img class="photo" src="img/Baldski1.0" alt="twitter">
         <div class="content">
             <p class="username"><b>@KSI</b></p>
             <p class="tweet">I am the Nightmare!! <b>KSI</b></p>
