--- a/Task-4/Login.html
+++ b/Task-4/Login.html
@@ -21,28 +21,68 @@
                 <div class="login-top">
                     <a href=""><img class="back-logo" src="assets/icons/back.svg" alt="back-logo"></a>
                     <p class="login-txt">Log in with Quantum</p></div>
-                <div class="radio-btn">
-                    <input type="radio" class="district">District
-                    <input type="radio" class="school">Independent school
-                </div>
-                <div>
-                    <p>State*</p>
-                    <input type="dropdown" class="dropdown" placeholder="Alabama" name="district" value="">
-                    <p>District*</p>
-                    <input type="dropdown" class="dropdown" placeholder="Alabama School District" name="district"
-                        value="">
-
-                </div>
+                    <div class="radio-btn">
+                        <label class="radio-label">
+                          <input type="radio" name="radio-option" class="radio-input" >
+                          <img src="assets/icons/radio-button-on.svg" alt="Radio On" class="radio-on">
+                          District
+                        </label>
+                        <label class="radio-label">
+                          <input type="radio" name="radio-option" class="radio-input" >
+                          <img src="assets/icons/radio-button-off.svg" alt="Radio Off" class="radio-off">
+                          Independent school
+                        </label>
+                      </div>
+                <div class="dropdown-container">
+                    <label for="state" class="label">State*</label>
+                    <div class="dropdown">
+                      <select id="state" class="dropdown-select">
+                        <option value="" disabled selected>Alabama</option>
+                        <option value="alaska">Alaska</option>
+                        <option value="arizona">Arizona</option>
+                        <!-- Add more states here -->
+                      </select>
+                      <img src="assets/icons/arrow-down.svg" alt="Dropdown Icon" class="dropdown-icon">
+                    </div>
+                  </div>
+                  <div class="dropdown-container">
+                    <label for="state" class="label">District*</label>
+                    <div class="dropdown">
+                      <select id="state" class="dropdown-select">
+                        <option value="" disabled selected>Alabama School District</option>
+                        <option value="alaska">Alaska</option>
+                        <option value="arizona">Arizona</option>
+                        <!-- Add more states here -->
+                      </select>
+                      <img src="assets/icons/arrow-down.svg" alt="Dropdown Icon" class="dropdown-icon">
+                    </div>
+                  </div>
                 <div class="textbox">
                     <input type="text" placeholder="Username/Email ID*" name="username" value="">
+                </div>
+                <div class="forgot-username">
+                    <a href=""><p class="forgot-password-txt">FORGOT USERNAME?</p></a>
                 </div>
                 <div class="textbox">
                     <input type="password" placeholder="Password*" name="password" value="">
                 </div>
-                <input class="btn" type="submit" name="login" value="Sign in">
-                <p>Don't have an account? <a href="register.php">Sign up</a></p>
+                <div class="forgot-password">
+                    <a href=""><p class="forgot-password-txt">FORGOT PASSWORD?</p></a>
+                </div>
+                <div class="login-bottom">
+                <div class="remember-me">
+                    <input type="checkbox" class="Remember-me-btn" value="checked">Remember Me
+                </div>
+                <div class="login-end">
+                    <input type="submit" class="login-btn" value="LOG IN">
             </div>
         </form>
+        
+    </div>
+    <div class="about">
+        <p>About</p>
+        <div class="dif"></div>
+        <p>Contact Us</p>
     </div>
     <footer class="footer">
         <img class="footer-logo" src="assets/icons/logo used in footer.svg" alt="logo">
