--- a/Task-4/Login.html
+++ b/Task-4/Login.html
@@ -81,7 +81,7 @@
     </div>
     <div class="about">
         <p>About</p>
-        <div class="dif"></div>
+        <div class="dif1"></div>
         <p>Contact Us</p>
     </div>
     <footer class="footer">
