--- a/Task-4/Dashboard.html
+++ b/Task-4/Dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/dashboard.css" />
+    <link rel="stylesheet" href="dashboard.css" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
 
     <title>Dashboard</title>
@@ -149,7 +149,6 @@
       </div>
 
       <div class="container-1 ">
-        <div class="expire">EXPIRED</div>
         <div class="upperpart">
           <img src="images/imageMask-2.png" />
           <div class="text">
