--- a/Task-7/Async-js/Placeholder.html
+++ b/Task-7/Async-js/Placeholder.html
@@ -10,10 +10,9 @@
     <div id="userData"></div>
 
     <script>
-        // Function to fetch data from the API asynchronously
         async function fetchData() {
             try {
-                const response = await fetch('https://jsonplaceholder.typicode.com/posts/1'); // Replace with your API endpoint
+                const response = await fetch('https://jsonplaceholder.typicode.com/posts/1'); 
                 if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
                 }
@@ -23,8 +22,6 @@
                 console.error('Error:', error);
             }
         }
-
-        // Function to display fetched data on the webpage
         function displayData(data) {
             const userDataElement = document.getElementById('userData');
             userDataElement.innerHTML = `
@@ -33,7 +30,6 @@
             `;
         }
 
-        // Call the fetchData function when the page loads
         window.addEventListener('load', fetchData);
     </script>
 </body>
