--- a/Task-7/Event-Handler/Event.html
+++ b/Task-7/Event-Handler/Event.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Handling Example</title>
     <style>
-        /* CSS styles for the button and message */
+        /* CSS for the button and message */
         #myButton {
             height: 50px;
             width: 200px;
@@ -27,7 +27,7 @@
         }
 
         #message {
-            display: none; /* Initially hidden */
+            display: none; 
             margin-top: 20px;
         }
 
@@ -43,13 +43,11 @@
     <h1>Event Handling Example</h1>
     <button id="myButton">Click Me!</button>
 
-    <!-- Image displayed before the button click -->
     <img id="beforeClickImage" src="before.jpg" alt="Before Click" />
 
 
     <p id="outputText">Button not clicked yet.</p>
 
-    <!-- Image displayed after the button click -->
     <div id="message">
         <img id="afterClickImage" src="after.jpg" alt="After Click" />
         <p>You just clicked me!</p>
@@ -66,11 +64,9 @@
             button.style.backgroundColor = 'green';
             button.disabled = true;
 
-            // Hide the before-click image
             const beforeClickImage = document.getElementById('beforeClickImage');
             beforeClickImage.style.display = 'none';
 
-            // Show the message and after-click image
             messageContainer.style.display = 'block';
         }
 
